deps/chakrashim/core/test/es6/unicode_6_identifier_Blue511452.baseline
SyntaxError: Invalid character
	at code (unicode_6_identifier_Blue511452.js:7:7)
