deps/chakrashim/core/test/es6/unicode_6_identifier_Blue511452.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

//Simple bug, should throw syntax error
var a\ = 5;
